--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -14,6 +14,11 @@
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+
+
+
+    JPT key = AIzaSyBnapZ_5yFmcc_sSU51VLznNe3iBwgXQVw
+    KC key = AIzaSyAkDJwO4wsVhIPsYKPfIOfyeF4B6RPImPQ
     -->
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
         AIzaSyBnapZ_5yFmcc_sSU51VLznNe3iBwgXQVw
