Corrigé bug de retour à MapsActivity de ImageViewActivity Ajouté gestion de l'affichage de ImageViewActivity selon marker est sauvegardé ou non Reste à ajouter code qui permettrait de sauvegarder markers bleus et lier URL

--- a/app/src/main/res/layout/content_image_view.xml
+++ b/app/src/main/res/layout/content_image_view.xml
@@ -42,11 +42,61 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
-    <ImageView
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/form_5"
+            android:id="@+id/adr_t4"
+            android:visibility="invisible"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/adr_v4"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/form_7"
+            android:id="@+id/url_lbl"
+            android:visibility="invisible"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/url_txt"
+            android:visibility="invisible"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/form_6"
+            android:id="@+id/confirm_button_place"
+            android:layout_below="@+id/linearLayout"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/imageView"
-        />
+        android:layout_weight="1">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView"
+            />
+
     </LinearLayout>
 
 </RelativeLayout>
